--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div id="unityContainer" style="width: 1600px; height: 900px"></div>
       <div class="footer">
         <div class="fullscreen" onclick="unityInstance.SetFullscreen(1)"></div>
-        <div class="title">CSGO Bombsite Simulator</div>
+        <div class="title">Fullscreen</div>
       </div>
     </div>
   </body>
