--- a/index.html
+++ b/index.html
@@ -4,8 +4,23 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>CSGO Bombsite Simulator</title>
-    <link rel="shortcut icon" href="TemplateData/Logo512.ico">
-    <link rel="stylesheet" href="TemplateData/style.css">
+	<link rel="shortcut icon" href="TemplateData/Logo512.ico">
+	<style>
+      body {
+        margin: 0;
+        background: #444;
+      }
+	  #unityContainer {
+        width: 100vw;
+        height: 100vh;
+      }
+      canvas {
+        width: 100%;
+        height: 100%;
+        display: block;
+      }
+    </style>
+    <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <script src="TemplateData/UnityProgress.js"></script>
     <script src="Build/UnityLoader.js"></script>
     <script>
@@ -13,12 +28,6 @@
     </script>
   </head>
   <body>
-    <div class="webgl-content">
-      <div id="unityContainer" style="width: 1600px; height: 900px"></div>
-      <div class="footer">
-        <div class="fullscreen" onclick="unityInstance.SetFullscreen(1)"></div>
-        <div class="title">Fullscreen</div>
-      </div>
-    </div>
+    <div id="unityContainer"></div>
   </body>
 </html>
