Added Progress Bar to Loading Screen

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>CSGO Bombsite Simulator</title>
-	<link rel="shortcut icon" href="TemplateData/Logo512.ico">
+    <link rel="shortcut icon" href="TemplateData/Logo512.ico">
 	<style>
       body {
         margin: 0;
@@ -20,6 +20,7 @@
         display: block;
       }
     </style>
+    <link rel="stylesheet" href="TemplateData/style.css">
     <script src="TemplateData/UnityProgress.js"></script>
     <script src="Build/UnityLoader.js"></script>
     <script>
@@ -27,6 +28,8 @@
     </script>
   </head>
   <body>
-    <div id="unityContainer"></div>
+    <div class="webgl-content">
+      <div id="unityContainer"></div>
+    </div>
   </body>
 </html>
